<resources>
    <string name="app_name">Survey Administration App</string>
    <string name="surveyor_label">Enter surveyor</string>
    <string name="participant_label">Participant name</string>
    <string name="button_lookup_results">Results</string>
    <string name="survey_service_label">Enter survey URL</string>
    <string name="initial_url">http://10.0.2.2:8080/DMSAssignment3/surveyservice/survey/</string>
    <string name="button_lookup_surveyors">Surveyors</string>
    <string name="button_lookup_participants">Participants</string>
    <string name="button_add_participants">Add Participant</string>
    <string name="add_participant">Add Participant</string>
    <string name="input_name" />
    <string name="input_surveyor" />
    <string name="add_button">Add</string>

    <string name="toggle_button">toggleButton</string>

    <string name="title">Android Location Demo</string>
    <string name="status">Location status</string>
    <string name="button_start">Start GPS</string>
    <string name="button_stop">Stop GPS</string>
    <string name="unknown">Unknown</string>
    <string name="provider_disabled">Location provider disabled</string>
    <string name="provider_enabled">Location provider enabled</string>
    <string name="provider_status_changed">Location provider status changed</string>
    <string name="permissions_denied">Location permissions denied</string>
    <string name="request_permission_title">Permission Request</string>
    <string name="request_permission_text">Need access to GPS</string>
    <string name="request_permission_positive">Allow</string>
    <string name="location_view" />
    <string name="location_button">See Locations</string>


</resources>
