<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/lookup_results"
        android:layout_width="81dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="268dp"
        android:onClick="lookupSurvey"
        android:text="@string/button_lookup_results"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url_edit" />

    <Button
        android:id="@+id/lookup_surveyors"
        android:layout_width="81dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="188dp"
        android:onClick="lookupSurvey"
        android:text="@string/button_lookup_surveyors"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url_edit" />

    <Button
        android:id="@+id/lookup_participants"
        android:layout_width="81dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:onClick="lookupSurvey"
        android:text="@string/button_lookup_participants"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url_edit" />

    <Button
        android:id="@+id/add_participant"
        android:layout_width="81dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:onClick="addParticipant"
        android:text="@string/button_add_participants"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url_edit" />

    <EditText
        android:id="@+id/url_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:inputType="textUri"
        android:text="@string/initial_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/url_label"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/survey_view"
        android:layout_width="329dp"
        android:layout_height="416dp"
        android:layout_marginStart="8dp"
        android:background="#BFA6A6"
        android:gravity="top"
        android:nestedScrollingEnabled="true"
        android:scrollIndicators="top"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:selectAllOnFocus="true"
        android:text=""
        android:verticalScrollbarPosition="right"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lookup_surveyors"
        app:layout_constraintVertical_bias="0.195" />

    <TextView
        android:id="@+id/url_label"
        android:layout_width="110dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:text="@string/survey_service_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/url_edit"
        app:layout_constraintEnd_toStartOf="@+id/url_edit"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/location_button"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:text="@string/location_button"
        android:onClick="lookupSurvey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/survey_view"
        app:layout_constraintVertical_bias="0.209" />


</androidx.constraintlayout.widget.ConstraintLayout>